--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,8 +1,32 @@
 @import './scss/utilities/functions';
+@import './scss/variables';
+
+* {
+  &,
+  &::before,
+  &::after {
+      box-sizing: border-box;
+  }
+}
+
+@for $i from 1 through 6 {
+  h#{$i} {
+    margin: 0;
+  }
+}
+
+body {
+  background-color: $body-bg;
+  font-family: 'Comfortaa';
+  color: $body-color;
+}
 
 .Container {
   margin-right: auto;
   margin-left: auto;
+
+  padding-right: rem($container-padding);
+  padding-left: rem($container-padding);
 
   width: 100%;
   min-width: rem(320);
