--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,14 @@
 $body-bg: #f2f2f2;
 $body-color: #999;
 
+$rating-high: #9335ff;
+$rating-low: #e89d40;
+$rating-default: #333;
+
+$message-count-background-high: #27aae1;
+$message-count-background-low: $rating-low;
+
+$message-question-color: #97999c;
+$message-margin-top: 36px;
+
 $container-padding: 15px;
