setting collapsed state, setting temp collapsed styles

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -30,7 +30,7 @@ p {
 }
 
 .Container {
-  margin: rem(20) auto 0;
+  margin: rem(60) auto;
 
   padding-right: rem($container-padding);
   padding-left: rem($container-padding);
