--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -13,3 +13,8 @@ $message-question-color: #97999c;
 $message-margin-top: 36px;
 
 $container-padding: 15px;
+
+$zindex: (
+    'badge': 20,
+    'card': 10
+);
