--- a/src/components/Thread/Thread.module.scss
+++ b/src/components/Thread/Thread.module.scss
@@ -26,6 +26,8 @@
     font-size: rem(11.5);
     color: #fff;
     text-align: center;
+
+    z-index: map-get($zindex, 'badge');
 }
 
 .MessageCountHigh {
