--- a/src/components/Thread/Message/Message.module.scss
+++ b/src/components/Thread/Message/Message.module.scss
@@ -14,6 +14,8 @@
 
     position: relative;
 
+    transition: box-shadow $transition;
+
     z-index: map-get($zindex, 'card');
 
     + .Message {
@@ -49,8 +51,11 @@
 }
 
 .MessageMeta {
-    // min-width: rem(140);
     text-align: right;
+    
+    @media (min-width: rem(576)) {
+        min-width: rem(140);
+    }
 }
 
 .TeamName {
