--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,6 +14,8 @@ $message-margin-top: 36px;
 
 $container-padding: 15px;
 
+$transition: .2s ease-in-out;
+
 $zindex: (
     'badge': 20,
     'card': 10
