--- a/src/components/Thread/Thread.scss
+++ b/src/components/Thread/Thread.scss
@@ -1,20 +1,21 @@
 @import '../../scss/utilities/functions';
 @import '../../scss/variables';
 
-.MessageCountRatingHigh {
-    background-color: $message-count-background-high;
-
+@mixin hoveredMessageBoxShadow($color) {
     + .Message:hover {
-        box-shadow: 0 rem(12) rem(32) rgba($message-count-background-high, .15),
-                    inset 0 0 0 rem(1) $message-count-background-high;
+        box-shadow: 0 rem(12) rem(32) rgba($color, .15),
+                    inset 0 0 0 rem(1) $color;
     }
 }
 
-.MessageCountRatingLow {
-    background-color: $message-count-background-low;
+.MessageCountRatingHigh {
+    @include hoveredMessageBoxShadow($message-count-background-high);
 
-    + .Message:hover {
-        box-shadow: 0 rem(12) rem(32) rgba($message-count-background-low, .15),
-                    inset 0 0 0 rem(1) $message-count-background-low;
-    }
+    background-color: $message-count-background-high;
+}
+
+.MessageCountRatingLow {
+    @include hoveredMessageBoxShadow($message-count-background-low);
+
+    background-color: $message-count-background-low;
 }
